--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
     "zombie": "^6.1.3",
     "helmet": "^3.13.0",
     "request": "^2.88.0",
-    "yahoo-finance": "^0.3.5",
-    "middleware": "^1.0.0",
-    "async": "^2.6.1"
+    "yahoo-finance": "^0.3.5"
+    
   },
   "engines": {
     "node": "8.1.3"
